gcc/testsuite/gdc.test/compilable/imports/a12506.d
module imports.a12506;

auto f12506(alias fun)() { return fun(1); }
