gcc/testsuite/gdc.test/fail_compilation/imports/b17918a.d
module imports.b17918a;

class Base
{
    auto byNode()
    {
        return _listMap;
    }
}
